# inspire-schemas

./: .editorconfig  .gitignore  .npmignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  Dockerfile  Dockerfile.py2  INSTALL.rst  MANIFEST.in  README.rst  authors_example.json  build-npm-package.sh  conferences_example.json  experiments_example.json  hep_example.json  institutions_example.json  jobs_example.json  journals_example.json  package-lock.json  package.json  requirements-build.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  rollup.config.js  ruff.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: build-and-release-py2.yml  build-and-release.yml  bump-and-publish.yml  pull-request-master.yml  pull-request-py2.yml  push-master.yml  push-py2.yml  test-python-2.yml  test-python-3.yml  test-python-py2.yml  test-python.yml
docs/: Makefile  api.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst  utils.rst
docs/resources/: custom.css
inspire_schemas/: __init__.py  api.py  builders.py  errors.py  upgraders.py  utils.py
inspire_schemas/builders/: __init__.py  authors.py  builder.py  conferences.py  data.py  jobs.py  literature.py  references.py  seminars.py  signatures.py
inspire_schemas/countries/: iso_3166-1.json  iso_3166-3.json  iso_overrides.json
inspire_schemas/parsers/: __init__.py  arxiv.py  author_xml.py  crossref.py  elsevier.py  hepdata.py  jats.py  (+1 more)
js/: index.js
scripts/: generate_example_records.js  normalize_yaml.py  prettify_json.sh  version_manager.py
(+166 files in other folders)
