[bumpversion]
current_version = 61.5.30
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[bumpversion:file:inspire_schemas/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
platforms = 
	any
classifiers = 
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
	Topic :: Software Development :: Libraries :: Python Modules
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Development Status :: 1 - Planning

[entry_points]
invenio_base.apps = 
	inspire_schemas = inspire_schemas:inspireschemas
invenio_i18n.translations = 
	messages = inspire_schemas

[files]
data_files = 
	inspire_schemas = inspire_schemas/*

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[tool:pytest]
pep8ignore = E501
